<resources>
    <string name="app_name">STUDIIAItrail2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="send_email">Send Email</string>
    <string name="flashcards">Flashcards</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="quiz_maker">Quiz Maker</string>
    <string name="progress_tracker">Progress Tracker</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="quizmaker">Quizmaker</string>
    <string name="add_file">Add File</string>
    <string name="add_files">Add file</string>
    <string name="quiz">Quiz</string>
    <string name="quiz_icon_desc">TODO</string>
    <string name="string_quiz_icon_desc">string/quiz_icon_desc</string>
</resources>